add file structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 set (CMAKE_CXX_STANDARD 17)
 
-set(sources registry.cc registry.h packedfunc.h)
+file(GLOB sources src/*.cc include/*.h)
+add_library(ctypes STATIC ${sources})
+target_include_directories(ctypes PUBLIC include)
 
-add_executable(main main.cc ${sources})
+add_executable(main samples/main.cc)
+target_link_libraries(main ctypes)
