--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-set (CMAKE_CXX_STANDARD 17)
+cmake_minimum_required(VERSION 3.10)
+
+set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB sources src/*.cc include/*.h)
 add_library(ctypes STATIC ${sources})
